# Agent-Memory-Hub

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh.md  ROADMAP.md  SECURITY.md  STRATEGY.md  install.ps1  install.sh  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  mypy-baseline.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy-official-site.yml  governance-gates.yml  hook-tests.yml  publish-npm.yml  python-tests.yml  release-installers.yml  sync-gitee.yml
Casks/: agent-memory-hub.rb
agent_brain/: __init__.py  diagnostic_types.py
agent_brain/agent_integrations/: __init__.py  aider.py  aider_config.py  aider_diagnostics.py  aone_copilot.py  awareness.py  capabilities.py  claude_code.py  claude_code_diagnostics.py  cline.py  codex.py  codex_agents.py  codex_config.py  codex_diagnostics.py  codex_hook_commands.py  codex_hook_diagnostics.py  codex_hook_trust.py  codex_hooks.py  continue_dev.py  cursor.py  diagnostics.py  evidence.py  github_copilot.py  hermes_agent.py  hook_config.py  lifecycle_records.py  manifests.py  mcp_config_diagnostics.py  mcp_diagnostics.py  memory_boundary.py  mulerun.py  openclaw.py  openhuman.py  opensquilla.py  (+10 more)
agent_runtime_kit/: AGENT_MEMORY_DISCIPLINE.md  HONEST_REVISION_PLAYBOOK.md  REFACTOR_DISCIPLINE.md  __init__.py
benchmarks/: __init__.py  benchmark_relevance.py  benchmark_retrieval.py  demo.sh  demo.tape  materialize_memory_eval_datasets.py  quickstart-60s.sh  release_gate.py  render_dataset_provenance_audit.py  render_memory_benchmark_dashboard.py  run_longmemeval_generation.py  run_longmemeval_retrieval_smoke.py  run_memory_benchmarks.py
deploy/: Dockerfile  agent-memory-hub.service  docker-compose.yml  env.example
docs/: UPGRADE.md  __init__.py  architecture.md  release-publishing.md  storage-lifecycle.zh.md
scripts/: benchmark-dual-route-hook.py  check-dual-route-calibration.py  check-hook-recall-evidence.py  check-recall-quality.py  check_mypy_baseline.py  docker-smoke.sh  dual-route-embedding-generator.lock.txt  generate-adapter-governance.py  generate-dual-route-embedding-fixture.py  generate-lifecycle-governance-report.py  materialize-dual-route-hook-benchmark.py  run-hook-recall-evidence.py
tests/: conftest.py  playbook-schema-test.sh  schema-auth-context-test.sh  schema-tenant-id-test.sh
web/: _base.py  app.py  auth.py  auth_storage.py  graph_payload.py  health_payloads.py  live_events.py  state_links.py  state_storage.py  state_store.py  state_webhooks.py  visibility.py
(+842 files in other folders)
